--- a/src/components/PostDetail/PostDetail.css
+++ b/src/components/PostDetail/PostDetail.css
@@ -41,3 +41,8 @@
     padding-left: 35px;
     text-transform: uppercase;
 }
+
+.wi {
+    font-size: 5em;
+    color: #787778;
+}
